# tpurun

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.cfg
src/tpurun/: __main__.py  app.py  cli.py  model.py
src/tpurun/data/: app.css
