[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=46.4.0",
  "wheel",
  "setuptools_scm[toml]>=6.2",
]

[tool.setuptools_scm]
write_to = "src/tpurun/_version.py"

[tool.black]
line-length = 110
target-version = [ 'py310']
ignore = ['F841', 'F401', 'E501']

[tool.ruff]
line-length = 110
target-version = 'py38'
ignore = [
    'F401'
]

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["src"]
known-first-party = [
    "tpurun",
]
