[metadata]
name = tpurun
author = Andrew Powers-Holmes
email = aholmes@omnom.net
maintainer = Andrew Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
py_modules =
    tpurun
include_package_data = True
install_requires =
    asyncssh >= 2.13.0, < 3.0.0
    colorama >= 0.4.3, < 0.5.0
    pydantic >= 1.10.8, < 2.0.0
    rich >= 13.0.0, < 14.0.0
    shellingham >= 1.5.0, < 2.0.0
    textual >= 0.27.0, < 1.0.0
    typer >= 0.9.0, < 1.0.0
    uvloop >= 0.17.0, < 1.0.0

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md, *.css

[options.extras_require]
dev =
    black >= 22.3.0
    ruff >= 0.0.234
    setuptools-scm >= 7.0.0
    mypy >= 0.981

[options.entry_points]
console_scripts =
    tpurun = tpurun.cli:cli

[flake8]
max-line-length = 110
ignore =
    # these are annoying during development but should be enabled later
    F401 # module imported but unused
    F841 # local variable is assigned to but never used
    # black automatically fixes this
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
    # this rule makes flake hate Typer so
    B008 # do not perform function calls in argument defaults
extend-exclude =
    .venv
